--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -54,6 +54,15 @@
                 android:layout_marginTop="16dp"
                 android:contentDescription="QR Code" />
 
+            <TextView
+                android:id="@+id/textViewFaltas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:text="" />
+
             <ProgressBar
                 android:id="@+id/loadingProgressBar"
                 android:layout_width="wrap_content"
