--- a/app/src/main/res/layout/activity_exportar.xml
+++ b/app/src/main/res/layout/activity_exportar.xml
@@ -130,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:background="#4B7A62"
+                android:background="@drawable/button_background_exportar"
                 android:padding="12dp"
                 android:text="Exportar"
                 android:textColor="#FFFFFF" />
