--- a/app/src/main/res/layout/activity_faltas.xml
+++ b/app/src/main/res/layout/activity_faltas.xml
@@ -19,10 +19,18 @@
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
+
         <Space
             android:layout_width="match_parent"
             android:layout_height="30dp" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Refeição:"
+            android:textColor="#ffffff"
+            android:padding="16dp"
+            android:textSize="20dp"/>
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,6 +53,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical">
+
 
             <Button
                 android:id="@+id/buttonScan"
